--- a/.travis.yml
+++ b/.travis.yml
@@ -1,31 +1,23 @@
+dist: trusty
+sudo: required
 language: java
-sudo: false # faster builds
 jdk:
+  - openjdk7
   - oraclejdk8
-  - oraclejdk9
-env:
-  global:
-    - secure: HU0QOLEDkYHcjX+PkicGGQ5g2L1/19V2fH13OSn82DOFlIiWmCfhSI8EG/QoWwPDp/HYQ4DH5Lo+ZEhVz5tgEultItyJ38LZJl/YYOzSAiRvTezmDdz+Cdg6SXAwCvgFCTagEJ1ChL5NyenDGDlwPB/drN0HlNNU6igPqNkM8l0=
-    - secure: VByzrX+inH3Z2nq50Hkj1FJnyOjPdsdIo/RUcl6DxUjkYfXP0n3tkPZGFA0PwiDpEwvRcSGLMR7mJ59Bhja5wgqXNhMqV4F0kB2PEFHSC3UmkyMnTSmDBKvP2aT6JLq00K3mYeNV5HiaYV4S7UVNdzZwaPCgc2aVZN8hF4f5/V8=
-    - secure: GWvKpGPBF1b/2tkYzJ/IwKpGd3kjfYpadIFoQOdQS3r6iZkutZ9FhW6vINIRsgcIRHTVha0BywG7m5sJIYo/jmsDbXc2VJFO7EcXkK6k96VZYb0pHjbXqeP/u9/ZfSzeQ4w3qNYUiXztmmrLjbCzG2gV4D2CqOaug2o81mVj4LI=
-    - secure: m91QxOLHBRnJzRyphCivL79i90pE/FO4yg8qTOaDuyTqVXBKnHmdARFOxSMZN9Qn3B3e28xxPaazIsJGCuPXiQKSObqzPLeFHUOa3atUJSckEUW623l1313A9iMFOYbqSBAHFHmiuuAJBwN/E2OnG3BcLZV1FRibW6J1qLRLdJw=
-install: true
+before_install:
+    - wget https://github.com/xetorthio/jedis/archive/10da8676b86c8f50447604d6b7b51a96a4be6533.zip
+    - unzip 10da8676b86c8f50447604d6b7b51a96a4be6533.zip
+    - cp -rT jedis-10da8676b86c8f50447604d6b7b51a96a4be6533 ./
+    - rm -r jedis-10da8676b86c8f50447604d6b7b51a96a4be6533
+    - rm 10da8676b86c8f50447604d6b7b51a96a4be6533.zip
+    - wget -O stunnel.tar.gz ftp://ftp.stunnel.org/stunnel/archive/5.x/stunnel-5.29.tar.gz
+    - tar -xvzf stunnel.tar.gz
+    - cd ./stunnel-5.29 && ./configure && make && sudo make install && cd ..
+install:
+  - make travis-install
+script: TEST="\!ModuleTest" make test
 cache:
   directories:
-    - "$HOME/.m2/repository"
-    - "$HOME/apache-maven-3.5.4"
-before_install:
-  - wget https://github.com/yutui1281461/vavr/archive/776e00148c8f8d8a96f39323f24e54966f70f0f9.zip
-  - unzip 776e00148c8f8d8a96f39323f24e54966f70f0f9.zip
-  - cp -rT vavr-776e00148c8f8d8a96f39323f24e54966f70f0f9 ./
-  - rm -r vavr-776e00148c8f8d8a96f39323f24e54966f70f0f9
-  - ls -al
-  - export M2_HOME=$HOME/apache-maven-3.5.4
-  - if [ ! -d $M2_HOME/bin ]; then curl https://archive.apache.org/dist/maven/maven-3/3.5.4/binaries/apache-maven-3.5.4-bin.tar.gz | tar zxf - -C $HOME; fi
-  - export PATH=$M2_HOME/bin:$PATH
-script: .travis/run-tests.sh
-after_success:
-  - bash <(curl -s https://codecov.io/bash)
-  - python <(curl -s https://raw.githubusercontent.com/TouK/sputnik-ci/master/sputnik-ci.py)
-  - mvn clean deploy -DskipTests --settings .travis/maven-settings.xml
-  - .travis/trigger-build.sh vavr-gwt
+    - $HOME/.m2
+addons:
+  hostname: jedis
