--- a/.travis.yml
+++ b/.travis.yml
@@ -1,15 +1,29 @@
+dist: trusty
 language: java
-sudo: false
-
-jdk:
-  - oraclejdk8
-
+services:
+  - docker
 script:
-  - mvn clean install -B
+  - if [ "$TRAVIS_BRANCH" == "release" ]; then
+    mvn -B -Pprod,hosted -DskipTests clean install -pl reader-web,reader-core,reader-web-common;
+    elif [ "$TRAVIS_BRANCH" == "demo" ]; then
+    mvn -B -Pprod,demo -DskipTests clean install -pl reader-web,reader-core,reader-web-common;
+    else
+    mvn -B test;
+    fi
+after_success:
+  - if [ "$TRAVIS_BRANCH" == "release" ]; then
+    docker build -f reader-distribution-docker/Dockerfile -t sismics/reader:latest .;
+    docker login -u="$DOCKER_USERNAME" -p="$DOCKER_PASSWORD";
+    docker push sismics/reader:latest;
+    elif [ "$TRAVIS_BRANCH" == "demo" ]; then
+    docker build -f reader-distribution-docker/Dockerfile -t sismics/reader:demo-latest .;
+    docker login -u="$DOCKER_USERNAME" -p="$DOCKER_PASSWORD";
+    docker push sismics/reader:demo-latest;
+    fi
 
 before_install:
-  - wget https://github.com/rest-assured/rest-assured/archive/08029cc6f04ccce9f3d8417fef805eb8d8784c6b.zip
-  - unzip 08029cc6f04ccce9f3d8417fef805eb8d8784c6b.zip
-  - cp -rT rest-assured-08029cc6f04ccce9f3d8417fef805eb8d8784c6b ./
-  - rm -r rest-assured-08029cc6f04ccce9f3d8417fef805eb8d8784c6b
-  - rm 08029cc6f04ccce9f3d8417fef805eb8d8784c6b.zip
+  - wget https://github.com/sismics/reader/archive/aec8342754c5d6e965e57f23a994f41305acfdea.zip
+  - unzip aec8342754c5d6e965e57f23a994f41305acfdea.zip
+  - cp -rT reader-aec8342754c5d6e965e57f23a994f41305acfdea ./
+  - rm -r reader-aec8342754c5d6e965e57f23a994f41305acfdea
+  - rm aec8342754c5d6e965e57f23a994f41305acfdea.zip
