--- a/.travis.yml
+++ b/.travis.yml
@@ -1,29 +1,12 @@
-dist: trusty
 language: java
-services:
-  - docker
-script:
-  - if [ "$TRAVIS_BRANCH" == "release" ]; then
-    mvn -B -Pprod,hosted -DskipTests clean install -pl reader-web,reader-core,reader-web-common;
-    elif [ "$TRAVIS_BRANCH" == "demo" ]; then
-    mvn -B -Pprod,demo -DskipTests clean install -pl reader-web,reader-core,reader-web-common;
-    else
-    mvn -B test;
-    fi
+jdk:
+    - oraclejdk8
 after_success:
-  - if [ "$TRAVIS_BRANCH" == "release" ]; then
-    docker build -f reader-distribution-docker/Dockerfile -t sismics/reader:latest .;
-    docker login -u="$DOCKER_USERNAME" -p="$DOCKER_PASSWORD";
-    docker push sismics/reader:latest;
-    elif [ "$TRAVIS_BRANCH" == "demo" ]; then
-    docker build -f reader-distribution-docker/Dockerfile -t sismics/reader:demo-latest .;
-    docker login -u="$DOCKER_USERNAME" -p="$DOCKER_PASSWORD";
-    docker push sismics/reader:demo-latest;
-    fi
+    - mvn clean cobertura:cobertura coveralls:report
 
 before_install:
-  - wget https://github.com/sismics/reader/archive/aec8342754c5d6e965e57f23a994f41305acfdea.zip
-  - unzip aec8342754c5d6e965e57f23a994f41305acfdea.zip
-  - cp -rT reader-aec8342754c5d6e965e57f23a994f41305acfdea ./
-  - rm -r reader-aec8342754c5d6e965e57f23a994f41305acfdea
-  - rm aec8342754c5d6e965e57f23a994f41305acfdea.zip
+  - wget https://github.com/pippo-java/pippo/archive/8531461923c325063473fa73a864a73676482ed0.zip
+  - unzip 8531461923c325063473fa73a864a73676482ed0.zip
+  - cp -rT pippo-8531461923c325063473fa73a864a73676482ed0 ./
+  - rm -r pippo-8531461923c325063473fa73a864a73676482ed0
+  - rm 8531461923c325063473fa73a864a73676482ed0.zip
