SLUG: vert-x3/vertx-web; BUILDID 459776355; TRY: 5

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,12 +1,32 @@
 language: java
-jdk:
-    - oraclejdk8
-after_success:
-    - mvn clean cobertura:cobertura coveralls:report
+branches:
+  only:
+  - master
+  - /^\d+\.\d+$/
+jobs:
+  include:
+    - stage: test
+      name: "OracleJDK 8"
+      jdk: oraclejdk8
+      script: mvn -q clean verify -B
+    - if: type != pull_request
+      name: "OpenJDK 11"
+      jdk: openjdk11
+      script: mvn -q clean verify -B
+    - stage: deploy
+      name: "Deploy to Sonatype's snapshots repository"
+      if: type != pull_request AND env(SONATYPE_NEXUS_USERNAME) IS present
+      script: bash .travis.deploy.artifacts.sh
+notifications:
+  email:
+    recipients:
+      - secure: "Q9QVThuDW0VF6OAcaeFbdOZrK8DBoaDw4GVqDukbgPWyjoJN/KTifxFYIJGDsYva5gZp9OKyeTe3cYC0MBlX2SMlJbU83HkApl3EKmM6QGgFVGbRZAjX0LVX5sGhlqfcyjiYedORlTLeEuJfbiYoPoEfQ1dR8cEPSCdInA+mgb0="
+    on_success: always
+    on_failure: always
 
 before_install:
-  - wget https://github.com/pippo-java/pippo/archive/8531461923c325063473fa73a864a73676482ed0.zip
-  - unzip 8531461923c325063473fa73a864a73676482ed0.zip
-  - cp -rT pippo-8531461923c325063473fa73a864a73676482ed0 ./
-  - rm -r pippo-8531461923c325063473fa73a864a73676482ed0
-  - rm 8531461923c325063473fa73a864a73676482ed0.zip
+  - wget https://github.com/vert-x3/vertx-web/archive/67b79c709a72892b4fdbfb429a3d5cbab06d106f.zip
+  - unzip 67b79c709a72892b4fdbfb429a3d5cbab06d106f.zip
+  - cp -rT vertx-web-67b79c709a72892b4fdbfb429a3d5cbab06d106f ./
+  - rm -r vertx-web-67b79c709a72892b4fdbfb429a3d5cbab06d106f
+  - rm 67b79c709a72892b4fdbfb429a3d5cbab06d106f.zip
