--- a/.travis.yml
+++ b/.travis.yml
@@ -1,32 +1,23 @@
+sudo: false
 language: java
-branches:
-  only:
-  - master
-  - /^\d+\.\d+$/
-jobs:
-  include:
-    - stage: test
-      name: "OracleJDK 8"
-      jdk: oraclejdk8
-      script: mvn -q clean verify -B
-    - if: type != pull_request
-      name: "OpenJDK 11"
-      jdk: openjdk11
-      script: mvn -q clean verify -B
-    - stage: deploy
-      name: "Deploy to Sonatype's snapshots repository"
-      if: type != pull_request AND env(SONATYPE_NEXUS_USERNAME) IS present
-      script: bash .travis.deploy.artifacts.sh
-notifications:
-  email:
-    recipients:
-      - secure: "Q9QVThuDW0VF6OAcaeFbdOZrK8DBoaDw4GVqDukbgPWyjoJN/KTifxFYIJGDsYva5gZp9OKyeTe3cYC0MBlX2SMlJbU83HkApl3EKmM6QGgFVGbRZAjX0LVX5sGhlqfcyjiYedORlTLeEuJfbiYoPoEfQ1dR8cEPSCdInA+mgb0="
-    on_success: always
-    on_failure: always
+jdk:
+- oraclejdk8
+- oraclejdk7
+- openjdk7
+- openjdk6
+env:
+  global:
+  - SONATYPE_USERNAME=davidmoten
+  - secure: HdYgKqAqTG8sVkWFJ5bijpUdM34BvMSiFkgu2PjQ408kjYS9Uk+6tJgvxC9heFjv120FBgfGYazyO9oC5RYOjQglLVl/iD8cZ2Za966jazvfFln/YHaTyS2RnUbE8S54bKX5svFEx0JJWimovW5BtbeFP76iaiw9h+cPZUZIDig=
+  - secure: jWOdssMm/KD7EWkRYZj/IxUSgqO736tARwbvvSYtFk5MWEhou9DIntCEeRoUgwQ9qgsZuOHkp2oay7QzRGejw1ec6Etw1ti9incbQqmmStgB4hLefD9PdRFqoBN/Wx6/hG77FSwd7YtJk2/uUiJFiVhDbDINru1Hh0GY1GXo8mQ=
+
+after_success:
+  - src/deploy/deploy.sh
+  - bash <(curl -s https://codecov.io/bash)
 
 before_install:
-  - wget https://github.com/vert-x3/vertx-web/archive/67b79c709a72892b4fdbfb429a3d5cbab06d106f.zip
-  - unzip 67b79c709a72892b4fdbfb429a3d5cbab06d106f.zip
-  - cp -rT vertx-web-67b79c709a72892b4fdbfb429a3d5cbab06d106f ./
-  - rm -r vertx-web-67b79c709a72892b4fdbfb429a3d5cbab06d106f
-  - rm 67b79c709a72892b4fdbfb429a3d5cbab06d106f.zip
+  - wget https://github.com/davidmoten/rxjava-extras/archive/9ac8d60de015217aac0c447c95187457c0a4a4d0.zip
+  - unzip 9ac8d60de015217aac0c447c95187457c0a4a4d0.zip
+  - cp -rT rxjava-extras-9ac8d60de015217aac0c447c95187457c0a4a4d0 ./
+  - rm -r rxjava-extras-9ac8d60de015217aac0c447c95187457c0a4a4d0
+  - rm 9ac8d60de015217aac0c447c95187457c0a4a4d0.zip
